Scrollbar bug for options panel

--- a/modules/analyze/html/adalanche.css
+++ b/modules/analyze/html/adalanche.css
@@ -28,16 +28,20 @@ button, input, optgroup, select, textarea {
 }
 
 .fullscreen {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
   top: 0px;
   left: 0px;
 }
 
+.fullheight {
+  height: 100vh;
+}
+
 #windows {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
   pointer-events: none;
   z-index: 30;
